--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -10,7 +10,8 @@ env:
   # Customize the CMake build type here (Release, Debug, RelWithDebInfo, etc.)
   BUILD_TYPE: Release
   CC: gcc-11 
-  CXX: g++-11
+  CXX: g++-12
+  CMAKE_CXX_FLAGS: -std=c++20
 
 jobs:
   build:
