--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -11,7 +11,7 @@ env:
   BUILD_TYPE: Release
   CC: gcc-11 
   CXX: g++-12
-  CMAKE_CXX_FLAGS: -std=c++20
+  # CMAKE_CXX_FLAGS: -std=c++20
   CXX_STANDARD: 20
 
 jobs:
